--- a/scss/abstract/_base.scss
+++ b/scss/abstract/_base.scss
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   @media (max-width: 900px) {
     font-size: 87.5%;
