--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,17 @@
+@import "abstract/variables";
+@import "abstract/utilities";
+@import "abstract/functions";
 @import "abstract/base";
+
 @import "components/svg";
 @import "typography";
 
+@import "components/button";
 @import "components/nav";
 @import "components/header";
+@import "components/select";
+
+@import "pages/home";
 
 .body_landing {
   min-height: 100vh;
