--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -2,10 +2,16 @@
   display: grid;
   grid-template-rows: 80vh 20vh;
   &_top {
+    min-width: 100%;
+    overflow: hidden;
     img {
       height: 100%;
       width: 100%;
       object-fit: cover;
     }
+  }
+  &_bottom {
+    padding: 2rem 0;
+    background-color: $color-primary;
   }
 }
