--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -1,4 +1,5 @@
-$color-primary: #f9a51b;
+// $color-primary: #f9a51b;
+$color-primary: #f39022;
 
 $color-grey: #bababa;
 $color-grey-light: #e6e6e6;
