--- a/scss/abstract/_base.scss
+++ b/scss/abstract/_base.scss
@@ -15,12 +15,21 @@ html {
 }
 
 body {
-  // font-family: $font-body;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: $font-body;
+  font-size: ms(0);
+  line-height: 1.8;
+  // font-family: "Roboto Condensed", sans-serif;
+
+  &.body_noScroll {
+    overflow: hidden;
+  }
 }
 
 .section {
   padding-top: ms(3);
+  &_bottom {
+    padding-top: ms(3);
+  }
   .heading_2 {
     // font-size: 1rem;
   }
