--- a/scss/components/_svg.scss
+++ b/scss/components/_svg.scss
@@ -1,9 +1,18 @@
 .svg {
   width: 1rem;
   height: 1rem;
-  transition: all 0.4s;
+  transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+  &_tiny {
+    width: 3px;
+    height: 3px;
+    fill: darken($color-grey, 20%);
+  }
   &_white {
     fill: #fff;
+  }
+  &_grey {
+    fill: $color-grey-light;
+    // fill: greenyellow;
   }
   &_absolute {
     position: absolute;
